2006-06-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/sys/time.h: Add header guard.  Add extern "C" bracketing
	for __cplusplus.
	(gettimeofday): Add prototype.
	* mingwex/gettimeofday.c: New file.
	* mingwex/makefile.in: Add gettimeofday source and object.

2006-06-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/math.h (HUGE_VAL): Define as builtin if __GNUC__ >= 3.3,
	else global library variable.
        (HUGEVALF): Likewise;
	(HUGEVALL): Likewise.
	(INFINITY): Likewise.
	(NAN): LiKewise.

2006-06-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/wcrtomb.c (wcrtomb_cp): Correct typo.

2006-06-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* Makefile.in (SUBDIRS): Change to lowercase for autoconf 2.59.

2006-05-24  Christopher Faylor  <cgf@timesys.com>

	* configure.in: Update to newer autoconf.
	(thanks to Steve Ellcey)
	* mingwex/configure.in: Ditto.
	* profile/configure.in: Ditto.
	* configure: Regenerate.
	* mingwex/configure: Ditto.
	* profile/configure: Ditto.
	* aclocal.m4: New file.
	* mingwex/aclocal.m4: Ditto.
	* profile/aclocal.m4: Ditto.

2006-05-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/wcrtomb.c (wcrtomb_cp): Test (wc > 255) only if C locale.
	Use supplied codepage as arg to WideCharToMultiByte. 

2006-02-13  Earnie Boyd  <earnie@users.sf.net>

	* Makefile.in (libmsvcr80.a): Add import lib.
	(libmsvcr80d.a): Ditto.

2006-01-18  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* Makefile.in: Bump cygwin build number.

2005-10-27  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* Include/_mingw.h: Increment version to 3.9.
	* Makefile.in: Ditto.

2005-10-14  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/limits.h (SSIZE_MAX): Define.
	(LLONG_MAX, LLONG_MIN, ULLONG_MAX): Separate from non-ISO names.

2005-10-13  Wu Yongwei  <adah@users.sourceforge.net>

	* include/tchar.h: Include <wchar.h> when _UNICODE is defined.